# knowme-ai

./: Dockerfile  README.md  docker-compose.yaml  playground.ipynb  pyproject.toml  requirements.txt
.github/workflows/: backend-build-push-deploy.yaml
app/: main.py  models.py
app/prompts/: __init__.py  base.py
app/services/: api_key_balancer.py  info_service.py  llm_service.py  redis_service.py  resume_service.py
brand/portfolio/: knowme-ai-portfolio-card.html
