[project]
name = "knowme-ai"
version = "1.0.0"
description = "A customizable chatbot powered by Google's Gemini LLM that dynamically answers questions about a user's career, skills, and background."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jenslee Dsouza", email = "dsouzajenslee@gmail.com" }]
dependencies = [
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "fastapi==0.115.12",
    "uvicorn==0.34.0",
    "redis==5.2.1",
    "langchain==0.3.22",
    "langchain-community==0.3.20",
    "langchain-google-genai==2.1.2",
    "pydantic>=2.5.2",
]

[tool.uv]
package = false
